syntax = "proto3";

package mentor;

service MentorService {
	rpc Login(LoginRequest) returns (LoginResponse);
    rpc ListLessons(ListLessonsRequest) returns (stream ListLessonsResponse);
}

message LoginRequest {
	string userName = 1;
	string password = 2;
}

message LoginResponse {
	bool isSuccessful = 1;
}

message Lesson {
    int32 id = 1;
    int32 score = 2;
    string title = 3;
    string by = 4;
    int32 time = 5;
    string url = 6;
}

message ListLessonsResponse {
    Lesson lesson = 1;
}

message ListLessonsRequest {
	
}